--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:sec="https://thymeleaf.org/extras/spring-security">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,11 +8,15 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </head>
+
 <body>
 <!-- Top Container -->
 <nav class="navbar navbar-expand-lg navbar-light bg-light p-3">
     <div class="container">
-        <a class="navbar-brand" th:href="@{/}">LOGO</a>
+        <a class="navbar-brand" th:href="@{/}">
+            <img class="rounded-circle" th:src="@{/images/ghost.png}" alt="Ghost" style="width: 30px; height: 30px; object-fit: cover; border-radius: 50%;">
+            Ghost
+        </a>
         <div class="ms-auto">
             <a th:href="@{/login}" class="btn btn-outline-primary me-2">Login</a>
             <a th:href="@{/register}" class="btn btn-primary">Sign Up</a>
@@ -40,7 +45,8 @@
 
             <div class="mb-3">
                 <label for="username" class="form-label">Username</label>
-                <input type="text" class="form-control" id="username" name="username" aria-describedby="usernameHelp">
+                <input type="text" class="form-control" id="username" name="username"
+                       aria-describedby="usernameHelp">
                 <div id="usernameHelp" class="form-text">Enter your preferred username.</div>
             </div>
             <div class="mb-3">
@@ -54,4 +60,5 @@
     </div>
 </div>
 </body>
+
 </html>
