--- a/src/main/resources/templates/publicPost.html
+++ b/src/main/resources/templates/publicPost.html
@@ -180,7 +180,7 @@
                 <a th:href="@{/dislike(id=${temp.id})}" class="btn btn-danger">
                     <i class="bi bi-hand-thumbs-down"></i> Dislike <span th:text="${temp.dislikes}"></span>
                 </a>
-                <a th:href="@{/deletePost(id=${temp.id})}" class="btn btn-danger">
+                <a th:href="@{/deletePublicPost(id=${temp.id})}" class="btn btn-danger">
                     <i class="bi bi-trash"></i> Delete
                 </a>
             </div>
